@@ -735,6 +735,7 @@ define function, begin
 707,maxmapid,0                # Return id number of the last map
 708,getslicelookupname,3,0,0,1 # Get the name of a lookup code (string id, code id, use default name)
 709,getnpcpool,1,0            # given an NPC reference, return its pool number
+710,gracefullydismountvehicle,0 # Dismount a vehicle, but cleanly
 
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
